# clifford-errors

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  array_job.sh  lattices.blend1  plan.md
alist/: alist.py  cubic_L=10.alist  cubic_L=12.alist  cubic_L=14.alist  cubic_L=16.alist  cubic_L=18.alist  cubic_L=20.alist  cubic_L=6.alist  cubic_L=6.txt  cubic_L=7.alist  cubic_L=7.txt  cubic_L=8.alist  cubic_L=8.txt  rhombic1_L=10.alist  rhombic1_L=12.alist  rhombic1_L=14.alist  rhombic1_L=16.alist  rhombic1_L=18.alist  rhombic1_L=20.alist  rhombic1_L=6.alist  rhombic1_L=8.alist  rhombic2_L=10.alist  rhombic2_L=12.alist  rhombic2_L=14.alist  rhombic2_L=16.alist  rhombic2_L=18.alist  rhombic2_L=20.alist  rhombic2_L=6.alist  rhombic2_L=8.alist
input/: 2022-01-05.csv  2022-01-05a.csv  2022-01-05b.csv  2022-01-05c.csv  2022-01-06.csv  2022-01-06a.csv  2022-01-06b.csv  gen_input.py
lib/blossom5/: CMakeLists.txt
src/: .decoderCubic.cpp.swp  .decoderRhombic1.cpp.swp  .main.cpp.swp  .nfs00000000301cd40a00000001  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cubic.cpp  cubic.h  czErrorGen.cpp  czErrorGen.h  decoderCubic.cpp  decoderCubic.h  decoderGeneric.cpp  decoderGeneric.h  decoderRhombic1.cpp  decoderRhombic1.h  decoderRhombic2.cpp  decoderRhombic2.h  lattice.cpp  lattice.h  latticeGeneric.cpp  latticeGeneric.h  main.cpp  rhombic1.cpp  rhombic1.h  rhombic2.cpp  rhombic2.h  rhombicGeneric.cpp  rhombicGeneric.h  saveHz.h  vis.cpp  vis.h
src/lib/blossom5/: Makefile  cmake_install.cmake
src/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/lib/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/src/: Makefile
src/tst/: Makefile
tst/: .decoderCubic-test.cpp.swp  .decoderRhombic1-test.cpp.swp  CMakeLists.txt  cubic-test.cpp  czErrorGen-test.cpp  decoderCubic-test.cpp  decoderGeneric-test.cpp  decoderRhombic1-test.cpp  decoderRhombic2-test.cpp  decoderToric-test.cpp  lattice-test.cpp  prepCZ.h  prepCubic.h  prepIndexVectors.h  prepLattice.h  prepLattices.h  prepRhombic1.h  prepRhombic2.h  rhombic1-test.cpp  rhombic2-test.cpp  rhombicGeneric-test.cpp
vis/: all_visualiser.py  cubic_visualiser.py  rhombic1_visualiser.py  rhombic2_visualiser.py  visualiser.py
vis/l6_csv/: edges_C.csv  edges_R1.csv  edges_R2.csv  vertices_C.csv  vertices_R2.csv  xSyndrome_C.csv  xSyndrome_R1.csv  xSyndrome_R2.csv  zErrors_C.csv  zErrors_R1.csv  zErrors_R2.csv
vis/test_csv_c/: edges.csv  zSyndrome.csv
vis/test_csv_r1/: vertices.csv  zErrors.csv
